--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "tape": "^4.7.0"
   },
+  "main": "./proto.js",
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
